--- a/app/views/games/games.list.html
+++ b/app/views/games/games.list.html
@@ -1,6 +1,3 @@
-<pre>
-	{{vm}}
-</pre>
 <h2>All Games</h2>
 
 <md-list>
@@ -11,7 +8,7 @@
 		<md-item ng-repeat="user in game.players">
 			<md-button ui-sref="user.details({userId: user.id})">
 				<md-icon md-svg-icon="{{ user.icon_url }}"></md-icon>
-				{{user.name}}
+				{{user.nickname}}
 			</md-button>
 		</md-item>
 	</md-item>
