--- a/app/views/games/games.list.html
+++ b/app/views/games/games.list.html
@@ -1,5 +1,5 @@
 <h2>All Games</h2>
-
+<md-button ui-sref="games.create" class="md-raised md-primary">New Game</md-button>
 <md-list>
 	<md-item ng-repeat="game in vm.games">
 		<h3>{{game.title}}</h3>
