--- a/app/views/games/games.list.html
+++ b/app/views/games/games.list.html
@@ -1,5 +1,28 @@
 <h2>All Games</h2>
 <md-button ui-sref="games.create" class="md-raised md-primary">New Game</md-button>
+
+<div flex layout-fill>
+	<md-grid-list 
+		md-cols-sm="1" md-cols-md="2" md-cols-gt-md="6" 
+		md-row-height-gt-md="1:1" md-row-height="4:3" 
+		md-gutter="8px" md-gutter-gt-sm="4px">
+		
+		<md-grid-tile ng-repeat="game in vm.games" 
+		md-rowspan="{{game.span.row}}" 
+		md-colspan="{{game.span.col}}" 
+		md-colspan-sm="1" 
+		style="background-color: {{game.background.toRGB()}}">
+			<md-icon md-svg-icon="{{game.icon}}"></md-icon>
+			<md-grid-tile-footer>
+				<h3>{{game.title}}</h3>
+			</md-grid-tile-footer>
+
+		</md-grid-tile>
+
+	</md-grid-list>
+</div>
+
+<!--
 <md-list>
 	<md-item ng-repeat="game in vm.games">
 		<h3>{{game.title}}</h3>
@@ -12,4 +35,4 @@
 			</md-button>
 		</md-item>
 	</md-item>
-</md-list>
+</md-list>-->
