--- a/app/views/partials/content.html
+++ b/app/views/partials/content.html
@@ -1,6 +1,6 @@
 <div flex layout="row">
 	
-	<div layout="row" ng-controller="GameController as gc">
+	<div layout="row" ng-controller="GameController as gc" >
 		<md-sidenav md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-z2" md-component-id="left">
 			<md-list>
 				<md-item ng-repeat="g in gc.games | orderBy:'createdOn'">
@@ -18,7 +18,7 @@
 
 	<!-- BEGIN MD-CONTENT -->
 	<md-content flex id="content">
-		<div ui-view></div>
+		<div ui-view layout-fill></div>
 	</md-content>
 	<!-- END MD-CONTENT -->
 </div>
