--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -8,6 +8,7 @@
 	<md-button ui-sref="games.list">
 		Games
 	</md-button>
+	<md-button ui-sref="users.list">
 		Users
 	</md-button>
 	<h1>Mah-jong Mayhem - By us</h1>
