--- a/app/views/users/users.contact.html
+++ b/app/views/users/users.contact.html
@@ -1,12 +1,12 @@
 <md-bottom-sheet class="md-list md-has-header">
 
     <md-subheader>
-        Contact <span class="name">{{ vm.user.name }}</span>:
+        Contact <span class="name">{{ vm_users.user.name }}</span>:
     </md-subheader>
 
     <md-list>
-      <md-item ng-repeat="item in vm.items">
-        <md-button ng-click="vm.performAction(item)">
+      <md-item ng-repeat="item in vm_users.items">
+        <md-button ng-click="vm_users.performAction(item)">
             <md-icon md-svg-icon="{{ item.icon_url }}"></md-icon>
             {{item.name}}
         </md-button>
