GameController $scope -> self

--- a/app/views/games/games.create.html
+++ b/app/views/games/games.create.html
@@ -39,7 +39,7 @@
 
 		</md-input-container>
 		
-		<md-button ng-click="addItem()" class="md-raised md-primary">Create</md-button>
+		<md-button ng-click="vm.addItem()" class="md-raised md-primary">Create</md-button>
 		
 	</div>
 
