--- a/app/views/users/users.detail.html
+++ b/app/views/users/users.detail.html
@@ -1,7 +1,2 @@
-<md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
-<h2>{{ul.selected.name}}</h2>
-<p>{{ul.selected.content}}</p>
-
-<md-button class="share" md-no-ink ng-click="ul.share($event)" aria-label="Share">
-	<md-icon md-svg-icon="share"></md-icon>
-</md-button>
+<h1>User Details</h1>
+ {{vm_users.selected.name}}
