oauth callback to angular.local

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -9,7 +9,7 @@
 		Games
 	</md-button>
 	<h1>Mah-jong Mayhem - By us</h1>
-	<md-button ng-href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://localhost/Mahjong-Mayhem/dist/authcallback/">
+	<md-button ng-href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://angular.local/authcallback/">
 		Login
 	</md-button>
 </md-toolbar>
