no more static data, home route fixed

--- a/app/views/partials/content.html
+++ b/app/views/partials/content.html
@@ -8,6 +8,9 @@
 						{{g.title}} - Players: {{g.players.length}} / {{g.maxPlayers}}
 					</md-button>
 				</md-item>
+					<md-button ng-click="gc.reload()">
+						reload
+					</md-button>
 			</md-list>
 		</md-sidenav>
 
