--- a/app/views/partials/content.html
+++ b/app/views/partials/content.html
@@ -11,6 +11,7 @@
 					</md-button>
 				</md-item>
 			</md-list>
+			<md-button ui-sref="users.list" class="md-raised md-primary">Join Game</md-button>
 		</md-sidenav>
 
 	</div>
