--- a/app/views/games/games.details.html
+++ b/app/views/games/games.details.html
@@ -1,3 +1,3 @@
-<md-button class="md-primary md-fab md-fab-top-right" ng-click="nav.toggleRight()">
-	Details
+<md-button class="md-primary md-fab md-fab-top-right" ng-click="nav.toggleRight()" aria-label="">
+	<i class="icon icon-info-outline icon-2x"></i>
 </md-button>
