--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -1,5 +1,5 @@
 <md-toolbar layout="row">
-	<md-button class="menu" hide-gt-sm ng-click="nav.toggleLeft()" aria-label="Show User List">
+	<md-button class="menu" hide-gt-md ng-click="nav.toggleLeft()" aria-label="Show User List">
 		<md-icon md-svg-icon="menu"></md-icon>
 	</md-button>
 	<md-button ui-sref="home">
@@ -8,9 +8,9 @@
 	<md-button ui-sref="games.list">
 		Games
 	</md-button>
-	<md-button ng-href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://angular.local/authcallback" aria-label="Login">
-		<md-icon md-svg-icon="share"></md-icon>
-	</md-button>
-	<h1>Mah-jong Mayhem - By us</h1>
 	
+	<h1>Mah-jong Mayhem - By us</h1>
+	<md-button ng-href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://angular.local/authcallback" aria-label="Login">
+		<i class="icon icon-exit-to-app icon-3x"></i>
+	</md-button>
 </md-toolbar>
