--- a/app/views/partials/menu.main.html
+++ b/app/views/partials/menu.main.html
@@ -1,22 +1,31 @@
-<div class="row" ng-controller="NavController as nav">
-	<md-sidenav md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-z2" md-component-id="left">
-    <md-toolbar class="md-theme-light">
+<section layout="row" ng-controller="NavController as nav">
+
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+
+    <md-toolbar class="md-theme-indigo">
       <h1 class="md-toolbar-tools">Games</h1>
-    </md-toolbar>
-		<md-list>
-			<md-item ng-repeat="g in vm.games | orderBy:'createdOn'">
-				<md-button ui-sref="games.details({gameId: g.id})">
-					{{g.title}} - Players: {{g.players.length}} / {{g.maxPlayers}}
-				</md-button>
-			</md-item>
-		</md-list>
-	</md-sidenav>
-	<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
-    <md-toolbar class="md-theme-light">
-      <h1 class="md-toolbar-tools">Sidenav Right</h1>
     </md-toolbar>
     <md-content layout-padding>
       <md-list>
+        <md-item ng-repeat="g in vm.games | orderBy:'createdOn'">
+          <md-button ui-sref="games.details({gameId: g.id})">
+            {{g.title}} - Players: {{g.players.length}} / {{g.maxPlayers}}
+          </md-button>
+        </md-item>
+      </md-list>
+    </md-content>
+
+  </md-sidenav>
+
+
+  <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
+
+    <md-toolbar class="md-theme-light">
+      <h1 class="md-toolbar-tools">Details</h1>
+    </md-toolbar>
+    <md-content layout-padding>
+      <md-list>
+      <md-subheader class="md-no-sticky">Players</md-subheader>
         <md-item ng-repeat="item in vm.selected.players">
           <md-button ng-click="vm.performAction(item)">
               <md-icon md-svg-icon="{{ item.icon_url }}"></md-icon>
@@ -24,6 +33,9 @@
           </md-button>
         </md-item>
       </md-list>
+
     </md-content>
+
   </md-sidenav>
-</div>
+
+</section>
