--- a/app/views/partials/content.html
+++ b/app/views/partials/content.html
@@ -1,4 +1,4 @@
-<div flex layout="row">
+<div flex layout="row" ng-controller="GameController as gc">
 	<game-menu></game-menu>
 
 	<!-- BEGIN MD-CONTENT -->
