--- a/app/views/partials/menu.main.html
+++ b/app/views/partials/menu.main.html
@@ -9,7 +9,7 @@
       <md-list>
         <md-item ng-repeat="g in gc.games | orderBy:'createdOn'">
           <md-button ng-click="gc.selectGame(g.id)" ui-sref="games.details({gameId: g.id})" >
-            {{g.title}} - Players: {{g.players.length}} / {{g.maxPlayers}}
+            {{g.gameTemplate.id}} ({{g.players.length}} - {{g.maxPlayers}})
           </md-button>
         </md-item>
       </md-list>
@@ -23,11 +23,17 @@
     <md-toolbar class="md-theme-light">
       <h1 class="md-toolbar-tools">Details</h1>
     </md-toolbar>
+
     <md-content layout-padding>
+      <md-button class="md-raised md-primary">Start</md-button>
+      <md-button class="md-raised md-primary">Join</md-button>
+      <md-button class="md-raised md-primary">Leave</md-button>
       <md-list>
       <md-subheader class="md-no-sticky">Players ({{gc.selected.players.length}} - {{gc.selected.maxPlayers}})</md-subheader>
         <md-item ng-repeat="player in gc.selected.players">
-          <i class="icon icon-person icon-2x"></i> {{player.name}}
+          <p>
+            <md-icon md-font-icon="icon-person"></md-icon> {{player.name}}
+          </p>
         </md-item>
       </md-list>
 
