Create game, Start game

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -1,5 +1,5 @@
 <md-toolbar layout="row" ng-controller="AuthController as auth">
-	<md-button class="menu" hide-gt-md ng-click="nav.toggleLeft()" aria-label="Show User List">
+	<md-button class="menu" show-gt-sm ng-click="nav.toggleLeft()" aria-label="Show User List">
 		<md-icon md-svg-icon="menu"></md-icon>
 	</md-button>
 	<md-button ui-sref="home">
