--- a/app/views/games/games.list.html
+++ b/app/views/games/games.list.html
@@ -18,7 +18,7 @@
 
 				<md-icon md-svg-icon="{{game.icon}}"></md-icon>
 				<md-grid-tile-footer>
-					<h3>{{game.title}}</h3>
+					<h3>{{game.gameTemplate.id}} ({{game.players.length}} - {{game.maxPlayers}})</h3>
 				</md-grid-tile-footer>
 
 			</md-grid-tile>
