--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -149,6 +149,14 @@ md-grid-tile {
 .tile {
   position: absolute;
 }
+
+div.tile:hover{
+/*  border-style: solid;
+  border-width: 6px;*/
+   -webkit-filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
+   filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
+}
+
 .top-toolbar{
   border-radius: 3px 3px 0 0;
   box-shadow: 0 1px rgba(255, 255, 255, 0.1);
