--- a/app/views/directives/tile.html
+++ b/app/views/directives/tile.html
@@ -10,6 +10,6 @@
 	-webkit-transform: translate3d({{tile.boardX}}px, {{tile.boardY}}px, {{tile.boardZ}}px);
 	transform: translate3d({{tile.boardX}}px, {{tile.boardY}}px, {{tile.boardZ}}px);"
 	ng-click="gc.tileClicked($index + 1)"
-	><!-- [{{$index + 1}}] --></div> 
+	></div> 
 
 	<!-- box-shadow: {{tile.boardZ}}px {{tile.boardZ}}px 5px 5px black; -->
