--- a/app/views/directives/tile.html
+++ b/app/views/directives/tile.html
@@ -2,7 +2,7 @@
 	style="
 	height: {{gc.tile.height}}px;
 	width: {{gc.tile.width}}px;
-	background: url(/assets/spritesdsmall.png) {{tile.sheetX}}px {{tile.sheetY}}px;
+	background: url(/assets/spritesdsmall.png) {{tile.sheetX}}px -{{tile.sheetY}}px;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	-webkit-backface-visibility:hidden;
