--- a/app/views/directives/tile.html
+++ b/app/views/directives/tile.html
@@ -9,7 +9,7 @@
 	background-size:cover;
 	-webkit-transform: translate3d({{tile.boardX}}px, {{tile.boardY}}px, {{tile.boardZ}}px);
 	transform: translate3d({{tile.boardX}}px, {{tile.boardY}}px, {{tile.boardZ}}px);"
-	ng-click="gc.tileClicked($index + 1)"
+	ng-click="gc.tileClicked(tile)"
 	></div> 
 
 	<!-- box-shadow: {{tile.boardZ}}px {{tile.boardZ}}px 5px 5px black; -->
