sockets werkend op joinen/starten game

--- a/app/views/games/games.list.html
+++ b/app/views/games/games.list.html
@@ -5,6 +5,7 @@
 <md-button ng-model="state" ng-click="state = 'open'" class="md-raised md-primary">Open</md-button>
 <md-button ng-model="state" ng-click="state = 'playing'" class="md-raised md-primary">Playing</md-button>
 <md-button ng-model="state" ng-click="state = 'finished'" class="md-raised md-primary">Finished</md-button>
+<md-button ng-click="gc.reload()" class="md-raised md-primary">Refresh</md-button>
 
 <div flex layout-fill>
 	<md-grid-list 
