tiles zijn nu enigszins zichtbaar na matchen

--- a/app/views/directives/matchedTile.html
+++ b/app/views/directives/matchedTile.html
@@ -1,6 +1,5 @@
-<div class="tile"
+<div class="matched-tile"
 	style="
-	height: {{gc.tile.height}}px;
 	width: {{gc.tile.width}}px;
 	background: url(/assets/spritesdsmall.png) {{tile.sheetX}}px {{tile.sheetY}}px;
 	transform-style: preserve-3d;
