Sass styling & switching styles

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -11,6 +11,9 @@
 	
 	<h1>Mah-jong Mayhem </h1>
 	<span flex></span>
+	<md-switch ng-model="cssc.blue" class="md-primary" aria-label="Styling">
+		Styling
+	</md-switch>
 	<h6 ng-model="auth.username">{{auth.username}}</h6>
 	<md-button ng-hide="auth.username" ng-href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://angular.local/authcallback" aria-label="Login">
 		<i class="icon icon-exit-to-app icon-3x"></i>
