--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -28,13 +28,13 @@ md-list .md-button {
   text-align: left;
   width: 100%;
 }
-  md-list .md-button.selected {
-    color: #03a9f4;
-  }
+md-list .md-button.selected {
+  color: #03a9f4;
+}
 
-  md-sidenav  md-list {
-    padding: 0px 0px 8px 0px;
-  }
+md-sidenav  md-list {
+  padding: 0px 0px 8px 0px;
+}
 
 
 /* Primary content area */
@@ -133,7 +133,7 @@ span.name {
 /**
  * Grid tile
  */
-md-grid-tile md-icon {
+ md-grid-tile md-icon {
   width: 50%;
   height: 50%;
 }
@@ -149,14 +149,14 @@ md-grid-tile {
 .tile {
   position: absolute;
   /*-webkit-filter: drop-shadow(2px 7px 7px rgba(0,0,0, 0.9));*/
-   /*filter: drop-shadow(2px 7px 7px rgba(0, 0, 0, 0.9));*/
+  /*filter: drop-shadow(2px 7px 7px rgba(0, 0, 0, 0.9));*/
 }
 
-div.tile:hover{
+.tile:hover{
 /*  border-style: solid;
-  border-width: 6px;*/
-   -webkit-filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
-   filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
+border-width: 6px;*/
+-webkit-filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
+filter: drop-shadow(0px 0px 7px rgba(85, 255, 0, 0.9));
 }
 
 .top-toolbar{
@@ -169,23 +169,28 @@ div.tile:hover{
   box-shadow: none;
 }
 
+.myPulse {
+  -webkit-animation: flash 1s ease-out;
+  -webkit-animation-iteration-count: 2; 
+}
+
 @-webkit-keyframes pulse {
-    0% { -webkit-transform: scale(1); }
-    50% { -webkit-transform: scale(1.1); }
-    100% { -webkit-transform: scale(1); }
+  0% { -webkit-transform: scale(1); }
+  50% { -webkit-transform: scale(1.1); }
+  100% { -webkit-transform: scale(1); }
 }
 @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.1); }
-    100% { transform: scale(1); }
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
 }
 @-webkit-keyframes flash {
-    0%, 50%, 100% {opacity: 1;}
-    25%, 75% {opacity: 0;}
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
 }
 @keyframes flash {
-    0%, 50%, 100% {opacity: 1;}
-    25%, 75% {opacity: 0;}
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
 }
 
 
