--- a/app/views/partials/game.panel.html
+++ b/app/views/partials/game.panel.html
@@ -23,6 +23,6 @@
 	</md-card>
 	<md-card class="game-container">
 		<h2 ng-show="gc.selected.state == 'open'"><md-button ng-click="gc.start(gc.selected.id)">Start game</md-button></h2>
-		<tile ng-repeat="tile in gc.selected.tiles | filter:{matched: false}"></tile>
+		<tile ng-repeat="tile in gc.selected.tiles | filter:{matched: false}" ng-click="gc.tileClicked(tile)"></tile>
 	</md-card>
 </section>
