--- a/app/views/partials/game.panel.html
+++ b/app/views/partials/game.panel.html
@@ -9,7 +9,7 @@
 			<span flex></span>
 
 			<md-button class="md-hue-1" ng-click="gc.cheat()" aria-label="">
-				Cheat
+				Hint
 			</md-button>
 			<md-button class="md-hue-1" ng-click="nav.toggleRight()" aria-label="">
 				<i class="icon icon-info-outline icon-2x"></i>
