--- a/app/views/partials/game.panel.html
+++ b/app/views/partials/game.panel.html
@@ -18,11 +18,20 @@
 
 		</div>
 	</md-toolbar>
-	<md-card style="display: table;" >
-		<matched-tile ng-repeat="tile in gc.selected.tiles | filter:{matched: true}"></matched-tile>
+	<h2 ng-show="gc.selected.state == 'open'"><md-button ng-click="gc.start(gc.selected.id)">Start game</md-button></h2>
+	<md-card style="float: right; max-width: {{12*gc.tile.width}}px;">
+		<md-card ng-repeat="player in gc.selected.players" style="float: left; max-width: {{4.5*gc.tile.width}}px">
+			<h2>{{player.name}}</h2>
+			<md-card style="display: table;" >
+				<matched-tile ng-show="player._id === tile.match.foundBy" ng-repeat="tile in gc.selected.tiles | filter:{matched: true} | orderBy: 'match.foundOn'"></matched-tile>
+			</md-card>
+		</md-card>
 	</md-card>
-	<md-card class="game-container">
-		<h2 ng-show="gc.selected.state == 'open'"><md-button ng-click="gc.start(gc.selected.id)">Start game</md-button></h2>
+
+	<md-card class="game-container" style="width: {{gc.maxX}}px; height: {{gc.maxY}}px">		
 		<tile ng-repeat="tile in gc.selected.tiles | filter:{matched: false}" ng-click="gc.tileClicked(tile)"></tile>
 	</md-card>
+
+
+
 </section>
